--- a/templates/theme_boost/footer.mustache
+++ b/templates/theme_boost/footer.mustache
@@ -44,6 +44,12 @@
             </div>
             <div class="footer_bottom">By accessing this learning management system, you are agreeing to abide by the Terms of and Conditions of Use. This includes ensuring that this is a space free of abuse, discrimination, and offensive material, as well as a site where confidentiality is respected and personal opinions expressed are not shared externally.</div>
         </div>
+        <div class="container">
+            <div>Elemento 1</div>
+            <div>Elemento 2</div>
+            <div>Elemento 3</div>
+        </div>
+
     </div>
     <div data-region="footer-container-popover">
         <button class="btn btn-icon bg-secondary icon-no-margin btn-footer-popover" data-action="footer-popover" aria-label="{{#str}}showfooter, theme_boost{{/str}}">
