--- a/style/scss/moodle.scss
+++ b/style/scss/moodle.scss
@@ -252,6 +252,7 @@ body {
   //http://foselearning.knowtechture.com
   //http://localhost
   background-image: url("http://localhost/theme/ddmood/pix/FOSlogo.png") !important;
+  //background-image: url([[pix:moodle|i/course]]);
   background-size: contain;
   background-repeat: no-repeat;
   width: 44px; // Ajusta al tamaño de tu logo
