--- a/templates/frontpage.mustache
+++ b/templates/frontpage.mustache
@@ -108,7 +108,20 @@ Example context (json):
                                 </div>
                                 {{/hasblocks}}
                             </div>
-                            <div class='alert alert-danger'>TEST Slider</div>
+
+                            <div class="cstm_owl">
+                                <div id="owl-carousel_slider" class="owl-carousel owl-theme">
+                                    <div class="item">
+                                        <img src="{{{slider1}}}" class="image-desktop">
+                                    </div>
+                                    <div class="item">
+                                        <img src="{{{slider2}}}" class="image-desktop">
+                                    </div>
+                                    <div class="item">
+                                        <img src="{{{slider3}}}" class="image-desktop">
+                                    </div>
+                                </div>
+                            </div>
 <!--                            {{{ output.full_header }}} -->
                             {{#secondarymoremenu}}
                             <div class="secondary-navigation d-print-none ktt-secondary-navigation">
