--- a/style/scss/moodle.scss
+++ b/style/scss/moodle.scss
@@ -8,6 +8,7 @@
 
 @import "components/navBar";
 @import "components/table";
+@import "components/owl_carousel.scss";
 
 @import "components/bootstrap/card";
 
@@ -16,6 +17,7 @@
 @import "components/moodle/blocks";
 @import "components/moodle/drawer.scss";
 @import "components/moodle/filemanager";
+
 //@import "components/moodle/search";
 
 @import "layouts/layout.scss";
