--- a/style/scss/moodle.scss
+++ b/style/scss/moodle.scss
@@ -312,3 +312,10 @@ body {
     }
   }
 }
+.custom-inner {
+  padding: 0 0.5rem 1.5rem!important;
+}
+
+#page.drawers {
+  margin-top: 38px!important;
+}
