--- a/templates/frontpage.mustache
+++ b/templates/frontpage.mustache
@@ -118,8 +118,22 @@ Example context (json):
                             </div>
                             {{/secondarymoremenu}}
                             <div class="container_cat">
-                                <div class="child"><a href="http://foselearning.knowtechture.com/moodle/course/index.php?categoryid=3"><div></div></a></div>
-                                <div class="child"><a href="http://foselearning.knowtechture.com/moodle/course/index.php?categoryid=5"><div></div></a></div>
+                                <div class="child">
+                                    <a href="http://foselearning.knowtechture.com/moodle/course/index.php?categoryid=3">
+                                        <div class="cat-cta">
+                                            <div class="icon hands"></div>
+                                            <div class="title">Our Feminist Alliance</div>
+                                        </div>
+                                    </a>
+                                </div>
+                                <div class="child">
+                                    <a href="http://foselearning.knowtechture.com/moodle/course/index.php?categoryid=5">
+                                        <div class="cat-cta">
+                                            <div class="icon blogs"></div>
+                                            <div class="title">Center for Transformative Narratives</div>
+                                        </div>
+                                    </a>
+                                </div>
                             </div>
                             <div id="page-content" class="pb-3 d-print-block">
                             <div>
