--- a/style/scss/base/_typography.scss
+++ b/style/scss/base/_typography.scss
@@ -1,52 +1,50 @@
 @font-face {
-  font-family: 'Isidora Sans Regular';
-  src: url('/fonts/isidora-sans/IsidoraSans-Regular.otf') format('opentype'),
-       url('/fonts/isidora-sans/IsidoraSans-Regular.ttf') format('truetype');
+  font-family: "Isidora Sans Regular";
+  src: url("/fonts/isidora-sans/IsidoraSans-Regular.otf") format("opentype"),
+    url("/fonts/isidora-sans/IsidoraSans-Regular.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Isidora Sans Medium';
-  src: url('/fonts/isidora-sans/IsidoraSans-Medium.otf') format('opentype'),
-       url('/fonts/isidora-sans/IsidoraSans-Medium.ttf') format('truetype');
+  font-family: "Isidora Sans Medium";
+  src: url("/fonts/isidora-sans/IsidoraSans-Medium.otf") format("opentype"),
+    url("/fonts/isidora-sans/IsidoraSans-Medium.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Isidora Sans Alt-Black';
-  src: url('/fonts/isidora-sans/IsidoraSansAlt-Black.otf') format('opentype'),
-       url('/fonts/isidora-sans/IsidoraSansAlt-Black.ttf') format('truetype');
+  font-family: "Isidora Sans Alt-Black";
+  src: url("/fonts/isidora-sans/IsidoraSansAlt-Black.otf") format("opentype"),
+    url("/fonts/isidora-sans/IsidoraSansAlt-Black.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
-
 
 h1 {
-  @include font-header-Sans_Black('Isidora Sans Black');
-  color: $FOS-Aubergine!important;
-  font-size: 1.6rem!important;
+  @include font-header("Isidora Sans Alt-Black");
+  color: $FOS-Aubergine !important;
+  font-size: 1.6rem !important;
 }
 
 h2 {
-  @include font-header-Sans_Black('Isidora Sans Black');
-  color: $FOS-Aubergine!important;
-  font-size: 1.2rem!important;
+  @include font-header("Isidora Sans Alt-Black");
+  color: $FOS-Aubergine !important;
+  font-size: 1.2rem !important;
 }
 
 h3 {
-  @include font-header-Sans_Black('Isidora Sans Medium');
-  color: $FOS-Aubergine!important;
+  @include font-header("Isidora Sans Medium");
+  color: $FOS-Aubergine !important;
 }
 
-h4{
-  @include font-header-Sans_Black('Isidora Sans Medium');
-  color: $FOS-Aubergine!important;
+h4 {
+  @include font-header("Isidora Sans Medium");
+  color: $FOS-Aubergine !important;
 }
-
 
 h5 {
-  @include font-header-Sans_Black('Isidora Sans Medium');
-  color: $FOS-Aubergine!important;
+  @include font-header("Isidora Sans Medium");
+  color: $FOS-Aubergine !important;
 }
