--- a/templates/frontpage.mustache
+++ b/templates/frontpage.mustache
@@ -119,9 +119,21 @@ Example context (json):
                             {{/secondarymoremenu}}
                             <div class="container_cat">
                                 <div class="child">
+                                    <a href="https://foselearning.knowtechture.com/moodle/course/index.php?categoryid=2">
+                                        <div class="cat-cta">
+                                            <div class="icon">
+                                                <img src="{{{i-our_FAT}}}">
+                                            </div>
+                                            <div class="title">Fòs Feminista Team</div>
+                                        </div>
+                                    </a>
+                                </div>
+                                <div class="child">
                                     <a href="http://foselearning.knowtechture.com/moodle/course/index.php?categoryid=3">
                                         <div class="cat-cta">
-                                            <div class="icon hands"></div>
+                                            <div class="icon">
+                                                <img src="{{{i-our_FA}}}">
+                                            </div>
                                             <div class="title">Our Feminist Alliance</div>
                                         </div>
                                     </a>
@@ -129,7 +141,9 @@ Example context (json):
                                 <div class="child">
                                     <a href="http://foselearning.knowtechture.com/moodle/course/index.php?categoryid=5">
                                         <div class="cat-cta">
-                                            <div class="icon blogs"></div>
+                                            <div class="icon">
+                                                <img src="{{{i-CTN}}}">
+                                            </div>
                                             <div class="title">Center for Transformative Narratives</div>
                                         </div>
                                     </a>
