--- a/templates/mycourses.mustache
+++ b/templates/mycourses.mustache
@@ -99,60 +99,14 @@ Example context (json):
                                 </div>
                                 {{/hasblocks}}
                             </div>
-
-                            <div class="cstm_owl">
-                                <div id="owl-carousel_slider" class="owl-carousel owl-theme">
-                                    <div class="item">
-                                        <img src="{{{slider1}}}" class="image-desktop">
-                                    </div>
-                                    <div class="item">
-                                        <img src="{{{slider2}}}" class="image-desktop">
-                                    </div>
-                                    <div class="item">
-                                        <img src="{{{slider3}}}" class="image-desktop">
-                                    </div>
-                                </div>
-                            </div>
-<!--                            {{{ output.full_header }}} -->
+                            <div class='alert alert-danger'>TEST - Course :-/</div>
                             {{#secondarymoremenu}}
                             <div class="secondary-navigation d-print-none ktt-secondary-navigation">
                                 {{> core/moremenu}}
                             </div>
                             {{/secondarymoremenu}}
-                            <div class="container_cat">
-                                <div class="child">
-                                    <a href="/my/courses.php#sb-1">
-                                        <div class="cat-cta">
-                                            <div class="icon">
-                                                <img src="{{{i-our_FAT}}}">
-                                            </div>
-                                            <div class="title">Fòs Feminista Team</div>
-                                        </div>
-                                    </a>
-                                </div>
-                                <div class="child">
-                                    <a href="/my/courses.php#sb-2">
-                                        <div class="cat-cta">
-                                            <div class="icon">
-                                                <img src="{{{i-our_FA}}}">
-                                            </div>
-                                            <div class="title">Our Feminist Alliance</div>
-                                        </div>
-                                    </a>
-                                </div>
-                                <div class="child">
-                                    <a href="/my/courses.php#sb-3">
-                                        <div class="cat-cta">
-                                            <div class="icon">
-                                                <img src="{{{i-CTN}}}">
-                                            </div>
-                                            <div class="title">Center for Transformative Narratives</div>
-                                        </div>
-                                    </a>
-                                </div>
-                            </div>
+
                             <div id="page-content" class="pb-3 d-print-block">
-                            <!--
                             <div>
                                 <div id="region-main-box">
                                     {{#hasregionmainsettingsmenu}}
@@ -184,7 +138,6 @@ Example context (json):
                                 </div>
 
                             </div>
-                            -->
                         </div>
                         {{> theme_boost/footer }}
                     </div>
