--- a/style/moodle.css
+++ b/style/moodle.css
@@ -106,6 +106,83 @@ h5 {
   color: #5c3873 !important;
 }
 
+.fos_feminista_team {
+  background-image: url('data:image/svg+xml,<svg width="198" height="201" viewBox="0 0 198 201" fill="none" xmlns="http://www.w3.org/2000/svg"><g filter="url(%23filter0_d_317_457)"><path d="M182.5 2H11.5C6.25329 2 2 6.2533 2 11.5V140.561C2 143.991 3.84869 147.154 6.83684 148.838L86.1838 193.542C88.9139 195.081 92.2269 195.173 95.0389 193.791L186.692 148.723C189.941 147.125 192 143.819 192 140.198V11.5C192 6.2533 187.747 2 182.5 2Z" fill="%235C3873"/></g><defs><filter id="filter0_d_317_457" x="0" y="0" width="198" height="202" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB"><feFlood flood-opacity="0" result="BackgroundImageFix"/><feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/><feOffset dx="2" dy="2"/><feGaussianBlur stdDeviation="2"/><feComposite in2="hardAlpha" operator="out"/><feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0"/><feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_317_457"/><feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_317_457" result="shape"/></filter></defs></svg>');
+}
+.fos_feminista_team a {
+  text-decoration: none !important;
+  color: #f9f2ea !important;
+}
+.fos_feminista_team a:hover {
+  color: #f9f2ea !important;
+}
+
+.our_feminist_alliance {
+  background-image: url('data:image/svg+xml,<svg width="198" height="201" viewBox="0 0 198 201" fill="none" xmlns="http://www.w3.org/2000/svg"><g filter="url(%23filter0_d_317_464)"><path d="M182.5 2H11.5C6.2533 2 2 6.2533 2 11.5V140.561C2 143.991 3.84869 147.154 6.83684 148.838L86.1838 193.542C88.9139 195.081 92.2269 195.173 95.0389 193.791L186.692 148.723C189.941 147.125 192 143.819 192 140.198V11.5C192 6.25329 187.747 2 182.5 2Z" fill="%2360AD8F"/></g><defs><filter id="filter0_d_317_464" x="0" y="0" width="198" height="202" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB"><feFlood flood-opacity="0" result="BackgroundImageFix"/><feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/><feOffset dx="2" dy="2"/><feGaussianBlur stdDeviation="2"/><feComposite in2="hardAlpha" operator="out"/><feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0"/><feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_317_464"/><feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_317_464" result="shape"/></filter></defs></svg>');
+}
+.our_feminist_alliance a {
+  text-decoration: none !important;
+  color: #383d47 !important;
+}
+.our_feminist_alliance a:hover {
+  color: #383d47 !important;
+}
+
+.innovation_social_enterprise_lab {
+  background-image: url('data:image/svg+xml,<svg width="198" height="201" viewBox="0 0 198 201" fill="none" xmlns="http://www.w3.org/2000/svg"><g filter="url(%23filter0_d_317_474)"><path d="M182.5 2H11.5C6.25329 2 2 6.2533 2 11.5V140.561C2 143.991 3.84869 147.154 6.83684 148.838L86.1838 193.542C88.9139 195.081 92.2269 195.173 95.0389 193.791L186.692 148.723C189.941 147.125 192 143.819 192 140.198V11.5C192 6.2533 187.747 2 182.5 2Z" fill="%23383D47"/><path d="M182.5 2H11.5C6.25329 2 2 6.2533 2 11.5V140.561C2 143.991 3.84869 147.154 6.83684 148.838L86.1838 193.542C88.9139 195.081 92.2269 195.173 95.0389 193.791L186.692 148.723C189.941 147.125 192 143.819 192 140.198V11.5C192 6.2533 187.747 2 182.5 2Z" fill="black" fill-opacity="0.2"/></g><defs><filter id="filter0_d_317_474" x="0" y="0" width="198" height="202" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB"><feFlood flood-opacity="0" result="BackgroundImageFix"/><feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/><feOffset dx="2" dy="2"/><feGaussianBlur stdDeviation="2"/><feComposite in2="hardAlpha" operator="out"/><feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0"/><feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_317_474"/><feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_317_474" result="shape"/></filter></defs></svg>');
+}
+.innovation_social_enterprise_lab a {
+  text-decoration: none !important;
+  color: #f9f2ea !important;
+}
+.innovation_social_enterprise_lab a:hover {
+  color: #f9f2ea !important;
+}
+
+.center_for_evidence_based_Advocacy {
+  background-image: url('data:image/svg+xml,<svg width="198" height="201" viewBox="0 0 198 201" fill="none" xmlns="http://www.w3.org/2000/svg"><g filter="url(%23filter0_d_317_498)"><path d="M182.5 2H11.5C6.25329 2 2 6.2533 2 11.5V140.561C2 143.991 3.84869 147.154 6.83684 148.838L86.1838 193.542C88.9139 195.081 92.2269 195.173 95.0389 193.791L186.692 148.723C189.941 147.125 192 143.819 192 140.198V11.5C192 6.2533 187.747 2 182.5 2Z" fill="%23C71585"/></g><defs><filter id="filter0_d_317_498" x="0" y="0" width="198" height="202" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB"><feFlood flood-opacity="0" result="BackgroundImageFix"/><feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/><feOffset dx="2" dy="2"/><feGaussianBlur stdDeviation="2"/><feComposite in2="hardAlpha" operator="out"/><feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0"/><feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_317_498"/><feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_317_498" result="shape"/></filter></defs></svg>');
+}
+.center_for_evidence_based_Advocacy a {
+  text-decoration: none !important;
+  color: #383d47 !important;
+}
+.center_for_evidence_based_Advocacy a:hover {
+  color: #383d47 !important;
+}
+
+.center_for_legal_responses {
+  background-image: url('data:image/svg+xml,<svg width="198" height="201" viewBox="0 0 198 201" fill="none" xmlns="http://www.w3.org/2000/svg"><g filter="url(%23filter0_d_317_532)"><path d="M182.5 2H11.5C6.25329 2 2 6.2533 2 11.5V140.561C2 143.991 3.84869 147.154 6.83684 148.838L86.1838 193.542C88.9139 195.081 92.2269 195.173 95.0389 193.791L186.692 148.723C189.941 147.125 192 143.819 192 140.198V11.5C192 6.25329 187.747 2 182.5 2Z" fill="%23E8CD0A"/></g><defs><filter id="filter0_d_317_532" x="0" y="0" width="198" height="202" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB"><feFlood flood-opacity="0" result="BackgroundImageFix"/><feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/><feOffset dx="2" dy="2"/><feGaussianBlur stdDeviation="2"/><feComposite in2="hardAlpha" operator="out"/><feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0"/><feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_317_532"/><feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_317_532" result="shape"/></filter></defs></svg>');
+}
+.center_for_legal_responses a {
+  text-decoration: none !important;
+  color: #383d47 !important;
+}
+.center_for_legal_responses a:hover {
+  color: #383d47 !important;
+}
+
+.center_for_transformative_Narratives {
+  background-image: url('data:image/svg+xml,<svg width="198" height="201" viewBox="0 0 198 201" fill="none" xmlns="http://www.w3.org/2000/svg"><g filter="url(%23filter0_d_317_574)"><path d="M182.5 2H11.5C6.2533 2 2 6.2533 2 11.5V140.561C2 143.991 3.84869 147.154 6.83684 148.838L86.1838 193.542C88.9139 195.081 92.2269 195.173 95.0389 193.791L186.692 148.723C189.941 147.125 192 143.819 192 140.198V11.5C192 6.2533 187.747 2 182.5 2Z" fill="%2300D4D9"/></g><defs><filter id="filter0_d_317_574" x="0" y="0" width="198" height="202" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB"><feFlood flood-opacity="0" result="BackgroundImageFix"/><feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/><feOffset dx="2" dy="2"/><feGaussianBlur stdDeviation="2"/><feComposite in2="hardAlpha" operator="out"/><feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0"/><feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_317_574"/><feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_317_574" result="shape"/></filter></defs></svg>');
+}
+.center_for_transformative_Narratives a {
+  text-decoration: none !important;
+  color: #383d47 !important;
+}
+.center_for_transformative_Narratives a:hover {
+  color: #383d47 !important;
+}
+
+.center_for_CSE_youth_friendly_services {
+  background-image: url('data:image/svg+xml,<svg width="198" height="201" viewBox="0 0 198 201" fill="none" xmlns="http://www.w3.org/2000/svg"><g filter="url(%23filter0_d_317_584)"><path d="M182.5 2H11.5C6.25329 2 2 6.2533 2 11.5V140.561C2 143.991 3.8487 147.154 6.83684 148.838L86.1838 193.542C88.9139 195.081 92.2269 195.173 95.0389 193.791L186.692 148.723C189.941 147.125 192 143.819 192 140.198V11.5C192 6.25329 187.747 2 182.5 2Z" fill="%23F06043"/></g><defs><filter id="filter0_d_317_584" x="0" y="0" width="198" height="202" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB"><feFlood flood-opacity="0" result="BackgroundImageFix"/><feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/><feOffset dx="2" dy="2"/><feGaussianBlur stdDeviation="2"/><feComposite in2="hardAlpha" operator="out"/><feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0"/><feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_317_584"/><feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_317_584" result="shape"/></filter></defs></svg>');
+}
+.center_for_CSE_youth_friendly_services a {
+  text-decoration: none !important;
+  color: #383d47 !important;
+}
+.center_for_CSE_youth_friendly_services a:hover {
+  color: #383d47 !important;
+}
+
 .ddmood-footer {
   width: 100%;
   color: #f9f2ea;
@@ -4741,36 +4818,6 @@ body #page-wrapper #page #region-main {
   word-wrap: 0px;
   font-weight: 800;
   line-height: 1rem;
-}
-.container_cat .child:nth-child(1) {
-  background-image: url('data:image/svg+xml,<svg width="188" height="191" viewBox="0 0 188 191" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M178.5 0H9.5C4.2533 0 0 4.25328 0 9.49999V137.108C0 140.645 1.96465 143.889 5.09894 145.527L89.5989 189.699C92.356 191.141 95.644 191.141 98.401 189.699L182.901 145.527C186.035 143.889 188 140.645 188 137.108V9.5C188 4.2533 183.747 0 178.5 0Z" fill="%235C3873"/><path d="M9.5 0.5H178.5C183.471 0.5 187.5 4.52944 187.5 9.5V137.108C187.5 140.459 185.639 143.532 182.669 145.084L98.1694 189.256C95.5575 190.622 92.4425 190.622 89.8306 189.256L5.33057 145.084C2.36125 143.532 0.5 140.459 0.5 137.108V9.49999C0.5 4.52942 4.52944 0.5 9.5 0.5Z" stroke="%23383D47" stroke-opacity="0.35"/></svg>');
-}
-.container_cat .child:nth-child(1) a {
-  text-decoration: none !important;
-  color: #f9f2ea !important;
-}
-.container_cat .child:nth-child(1) a:hover {
-  color: #f9f2ea !important;
-}
-.container_cat .child:nth-child(2) {
-  background-image: url('data:image/svg+xml,<svg width="188" height="191" viewBox="0 0 188 191" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M178.5 0H9.5C4.2533 0 0 4.25328 0 9.49999V137.108C0 140.645 1.96465 143.889 5.09894 145.527L89.5989 189.699C92.356 191.141 95.644 191.141 98.401 189.699L182.901 145.527C186.035 143.889 188 140.645 188 137.108V9.5C188 4.2533 183.747 0 178.5 0Z" fill="%2360AD8F"/><path d="M9.5 0.5H178.5C183.471 0.5 187.5 4.52944 187.5 9.5V137.108C187.5 140.459 185.639 143.532 182.669 145.084L98.1694 189.256C95.5575 190.622 92.4425 190.622 89.8306 189.256L5.33057 145.084C2.36125 143.532 0.5 140.459 0.5 137.108V9.49999C0.5 4.52942 4.52944 0.5 9.5 0.5Z" stroke="%23383D47" stroke-opacity="0.35"/></svg>');
-}
-.container_cat .child:nth-child(2) a {
-  text-decoration: none !important;
-  color: #383d47 !important;
-}
-.container_cat .child:nth-child(2) a:hover {
-  color: #383d47 !important;
-}
-.container_cat .child:nth-child(3) {
-  background-image: url('data:image/svg+xml,<svg width="188" height="191" viewBox="0 0 188 191" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M178.5 0H9.5C4.2533 0 0 4.25328 0 9.49999V137.108C0 140.645 1.96465 143.889 5.09894 145.527L89.5989 189.699C92.356 191.141 95.644 191.141 98.401 189.699L182.901 145.527C186.035 143.889 188 140.645 188 137.108V9.5C188 4.2533 183.747 0 178.5 0Z" fill="%2300D4D9"/><path d="M9.5 0.5H178.5C183.471 0.5 187.5 4.52944 187.5 9.5V137.108C187.5 140.459 185.639 143.532 182.669 145.084L98.1694 189.256C95.5575 190.622 92.4425 190.622 89.8306 189.256L5.33057 145.084C2.36125 143.532 0.5 140.459 0.5 137.108V9.49999C0.5 4.52942 4.52944 0.5 9.5 0.5Z" stroke="%23383D47" stroke-opacity="0.35"/></svg>');
-}
-.container_cat .child:nth-child(3) a {
-  text-decoration: none !important;
-  color: #383d47 !important;
-}
-.container_cat .child:nth-child(3) a:hover {
-  color: #383d47 !important;
 }
 
 .custom-inner {
